# risc-v-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
common/: macro.h
include/: common.h  cpu.h  instructions.h  memory.h  sim.h  sim_memory.h
isa/: isa.yaml  isa_parser.rb
simulator/: CMakeLists.txt  controller.h  main.cpp  simulator.cpp  simulator.h
simulator/cpu/: CMakeLists.txt  cpu.cpp  cpu.h  pipeline.cpp
simulator/decoder/: CMakeLists.txt  decoder.cpp  decoder.h
simulator/decoder/templates/: decoder.inl.erb  dispatch_labels_enum.inl.erb  signatures_definition.inl.erb
simulator/elf-loader/: CMakeLists.txt  elf_loader.cpp  elf_loader.h
simulator/elf_loader/: CMakeLists.txt  elf_loader.cpp  elf_loader.h
simulator/interpreter/: CMakeLists.txt  interpreter.cpp  interpreter.h  interpreter_handlers.inl  register.h
simulator/interpreter/templates/: dispatch_table.inl.erb
simulator/memory/: CMakeLists.txt  memory.cpp  memory.h  mmu.cpp  mmu.h  primitives.h  sim_memory.cpp  sim_memory.h
sources/: CMakeLists.txt
sources/common/: CMakeLists.txt  common.cpp  main.cpp
sources/cpu/: CMakeLists.txt  cpu.cpp  main.cpp
sources/memory/: CMakeLists.txt  memory.cpp  sim_memory.cpp
tests/: CMakeLists.txt  README.MD  elf_load_test  elf_load_test.cpp  fibbonacci.c  fibbonacci_decoded_ref.sim  tests.cpp
tests/elfs/: fibbonacci_riscv  fibbonacci_x86
uarchsim/: CMakeLists.txt  driver.cpp
uarchsim/verilog/: common.v  top.v
uarchsim/verilog/core/: BackWriter.v  CMakeLists.txt  Core.v  Decoder.v  Executor.v  Fetcher.v  stages.v
uarchsim/verilog/core/templates/: decoder_inl.v.erb
uarchsim/verilog/mem/: MemUnit.v  TLB.v
